--- a/README
+++ b/README
@@ -33,6 +33,6 @@ I am a Java Full Stack Developer with a passion for creating seamless user exper
 📫 How to reach me:
 
     Email: rgokulnath.cs@gmail.com
-    LinkedIn: https://www.linkedin.com/in/gokul-nath-r-79a047308/ 
+    LinkedIn: https://www.linkedin.com/in/gokul-nath-r/
 
 Thanks for visiting my profile! 😊 Feel free to reach out if you'd like to collaborate or share insights!
